--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <!-- Internet permission (for future phases, but declared now) -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Network state permission for VPN network activation detection -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <!-- Foreground service permission (Android 9+) -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
